<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:textColor="#F63100"
        android:title="Settings"
        android:titleCondensed="Settings">

        <EditTextPreference
            android:dialogMessage="Only numeric IDs are allowed"
            android:persistent="true"
            android:defaultValue="-1"
            app:icon="@drawable/ic_session1"
            android:key="sessionId"
            app:title="@string/sessionId"
            app:useSimpleSummaryProvider="true"/>


        <EditTextPreference
            android:dialogMessage="Suggested port: 1883"
            android:key="serverPort"
            android:persistent="true"
            android:title="@string/serverPort"
            app:defaultValue="@string/defaultServerPort"
            app:icon="@drawable/ic_port"
            android:textColor="@android:color/black"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:layout_width="match_parent"
            android:dialogMessage="Example: test.mosquitto.org"
            android:key="serverIp"
            android:persistent="true"
            android:title="@string/serverIp"
            app:defaultValue="@string/defaultServerIp"
            app:icon="@drawable/ic_ip"
            app:useSimpleSummaryProvider="true" />



        <ListPreference
            android:defaultValue="2"
            android:entries="@array/qos_entries"
            android:entryValues="@array/qos_values"
            app:icon="@drawable/ic_qos"
            android:key="qos"
            app:title="@string/qosLevel"
            />


        <Preference
            app:fragment="com.uoa.myapplication.SettingsActivity$LastWillSettings"
            app:icon="@android:drawable/ic_menu_send"
            app:key="last_will_header"
            app:title="@string/lw" />

        <Preference
            app:fragment="com.uoa.myapplication.SettingsActivity$SecuritySettings"
            app:icon="@drawable/ic_lsec1"
            app:key="simulation_settings_header"
            app:title="@string/authentication" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            app:icon="@drawable/ic_c2"
            app:key="autoCoords"
            app:disableDependentsState="true"
            app:summaryOff="@string/autoOff"
            app:summaryOn="@string/autoOn"
            app:title="@string/autoCoords" />

        <ListPreference
            android:dependency="autoCoords"
            app:defaultValue="0"
            app:entries="@array/locationSUDO"
            app:entryValues="@array/locationLEVELS"
            app:icon="@drawable/ic_coords1"
            app:key="location"
            app:title="@string/deviceLocation"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>







</PreferenceScreen>