<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="25dp">

    <TextView
        android:id="@+id/createSmokeSensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/smoke1"
        android:textAlignment="center"
        android:textSize="20sp"
        android:contentDescription="@string/smoke_sensor_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

    </LinearLayout>

    <com.google.android.material.slider.Slider
        android:id="@+id/smokeSensorSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:valueFrom="0f"
        android:valueTo="0.25f"
        app:values="@array/MinimumMaximumSMOKE"
        android:contentDescription="@string/smoke_sensor_slider_description" />

    <TextView
        android:id="@+id/smokeSensorActiveTextView"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/smoke_sensor_active_description"
        android:text="@string/sensorActive"
        android:textStyle="bold"
        android:typeface="serif" />

    <CheckBox
        android:id="@+id/smokeSensorActiveCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-10dp"
        android:buttonTint="@color/orange_light"
        android:contentDescription="@string/smoke_sensor_check_description"
        android:text="@string/empty"
        android:textSize="20sp" />

</LinearLayout>
