<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.CustomAppTheme.AppBarOverlay">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="16sp"
                android:text="@string/name"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:textSize="18sp" />

            <!-- Spacer -->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <!-- Spacer -->

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="60dp"
                android:layout_height="?attr/actionBarSize"
                android:textColor="@android:color/white"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="?attr/colorPrimary"
            android:textAlignment="center"
            android:contentDescription="@string/tabs_description"
            app:layout_scrollFlags="enterAlways"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/white"
            app:tabMode="auto"
            app:tabTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/vp_description"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/orange_light"
        android:contentDescription="@string/activate_tethering"
        android:src="@drawable/ic_tethering_on"
        app:maxImageSize="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="101dp"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        android:text="Connect to Server" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
